# remote_phone_control

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
src/remote_phone_control/: __init__.py  snom.py  yealink.py
tests/: .env.example  __init__.py  test_snom.py
